@@ -456,10 +456,13 @@ exit 0
 %{__prefix}/include/popt.h
 
 %changelog
-* Mon Dec 24 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.39
+* Thu Dec 26 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.39
+- add Red Hat pubkeys to rpm header.
+- resurrect automagic perl(foo) dependency generation.
+
+* Tue Dec 24 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.38
 - add %%pubkey attribute to read armored pubkey files into header.
 - permit both relative/absolute paths, display 'P' when verifying.
-- add Red Hat pubkeys to rpm header.
 
 * Mon Dec 23 2002 Jeff Johnson <jbj@redhat.com> 4.2-0.36
 - add matching "config(N) = EVR"  dependencies iff %%config is found.
